add different flavors to the useSiteNullChecks compiler option
Reviewed-by: mcimadamore